--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "embla-carousel-react": "^8.0.0",
+    "firebase": "^10.10.0",
     "formidable": "^3.5.1",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -31,6 +32,7 @@
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
