--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -22,15 +27,15 @@
     "embla-carousel-react": "^8.0.0",
     "firebase": "^10.10.0",
     "formidable": "^3.5.1",
+    "framer-motion": "^11.0.25",
+    "lucide-react": "^0.365.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.6",
-    "ra-data-json-server": "^4.16.12",
     "react": "^18",
-    "react-admin": "^4.16.12",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
