--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/api/product", "app/api/upload/route.js", "components/Products/add-Product-form.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/api/product", "app/api/upload/route.js", "components/Products/add-Product-form.jsx", "lib/actions.js", "app/dashboard/product/page.jsx"],
   "exclude": ["node_modules"]
 }
